--- a/BinaryOptimization_Vignette.html
+++ b/BinaryOptimization_Vignette.html
@@ -365,19 +365,52 @@ techniques, this package provides tools to build, analyze, and interpret
 logistic regression models.The package focuses on estimating model
 coefficients, evaluating model performance, and generating confidence
 intervals for better statistical understanding.</p>
+<div id="installing-loading-packages" class="section level2">
+<h2>Installing &amp; Loading Packages</h2>
 <pre class="r"><code>library(devtools)</code></pre>
 <pre><code>## Loading required package: usethis</code></pre>
 <pre><code>## Warning: package &#39;usethis&#39; was built under R version 4.3.3</code></pre>
 <pre class="r"><code>install_github(&quot;AU-R-Programming/FinalProject_Group12&quot;)</code></pre>
 <pre><code>## Using GitHub PAT from the git credential store.</code></pre>
-<pre><code>## Skipping install of &#39;BinaryOptimization&#39; from a github remote, the SHA1 (b99c06f2) has not changed since last install.
+<pre><code>## Skipping install of &#39;BinaryOptimization&#39; from a github remote, the SHA1 (70125ad9) has not changed since last install.
 ##   Use `force = TRUE` to force installation</code></pre>
 <pre class="r"><code>library(BinaryOptimization)</code></pre>
+</div>
+<div id="example-data" class="section level2">
+<h2>Example Data</h2>
+<p>Once the package have been loaded, we can provide an example dataset
+to demonstrate this package’s functions. First we will create a simple,
+small dataset with two predictors and a binary outcome variable.</p>
 <pre class="r"><code>X &lt;- matrix(c(1, 1, 1, 1, 2, 3, 4, 5), ncol = 2)
-y &lt;- c(0, 1, 1, 0)
-initial_values(X, y)</code></pre>
-<pre><code>## [1] 5.000000e-01 5.551115e-17</code></pre>
+y &lt;- c(0, 1, 1, 0)</code></pre>
+</div>
+<div id="estimating-coefficients-for-logistic-regression" class="section level2">
+<h2>Estimating Coefficients For Logistic Regression</h2>
+<p>The core of this package is in estimating the coefficients β to
+represent the influence of the predictors on the binary outcome. It does
+this by minimizing the logistic loss function using the
+Broyden-Fletcher-Goldfarb-Shanno (BFGS) optimization method.</p>
+<pre class="r"><code># Estimate the coefficients for the logistic regression model
+beta_estimates &lt;- estimate_coefficients(X, y)
+print(beta_estimates)</code></pre>
+<pre><code>## [1]  3.099257e-06 -1.216943e-06</code></pre>
+</div>
+<div id="evaluate-the-model-using-logistic-loss" class="section level2">
+<h2>Evaluate The Model Using Logistic Loss</h2>
+<p>Once we have the estimated coefficients, we can use the
+logistic_loss() function to evaluate the fit of the model by calculating
+the logistic loss. The logistic loss is a measure of how well the
+model’s predictions match the actual data, with lower values indicating
+better performance.</p>
+<pre class="r"><code># Define the estimated coefficients
+beta &lt;- beta_estimates
+
+# Compute the logistic loss for the current model
+loss &lt;- logistic_loss(beta, X, y)
+print(loss)</code></pre>
+<pre><code>## [1] 2.772589</code></pre>
 <p>References: <a href="https://chatgpt.com/share/674f5a8b-75e4-8011-bb0f-a7d310511afb" class="uri">https://chatgpt.com/share/674f5a8b-75e4-8011-bb0f-a7d310511afb</a></p>
+</div>
 
 
 
